# events

./: .gitignore  .pre-commit-config.yaml  AGENTS.MD  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  example.env  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  state.py
app/config/: logging_config.py  settings.py
app/db/: _utils.py  elastic.py  mongo.py  redis.py
app/middleware/: request_size.py  trace_id.py
app/models/: events.py  stats.py
app/routers/v1/: events.py  search.py  stats.py
app/services/: events.py  stats.py
app/tasks/: dlq.py  event_queue.py  events.py  worker.py
tests/: conftest.py  test_cors.py  test_event_validation.py  test_events.py  test_middleware.py  test_query_builder.py  test_search.py  test_stats.py  test_tasks.py
tests/integration/: conftest.py  helpers.py  test_celery_mongo.py  test_elasticsearch.py  test_mongo_queries.py
