[project]
name = "events"
version = "0.1.0"
description = "Events API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "elasticsearch[async]>=9.3.0",
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "pymongo>=4.16.0",
    "redis>=7.3.0",
    "ruff>=0.15.6",
    "pydantic-settings>=2.7.0",
    "slowapi>=0.1.9",
    "uvicorn>=0.41.0",
    "uvloop>=0.22.1",
]

[tool.pytest.ini_options]
pythonpath = ["app", "tests/integration"]
markers = [
    "integration: tests that require real external services (mongo, redis, elasticsearch)",
]
addopts = "--cov=app --cov-fail-under=80"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.ruff.lint]
select = ["I", "B", "SIM", "S"]

[tool.ruff.lint.per-file-ignores]
# assert is the standard pytest assertion style
"tests/**" = ["S101"]
# FastAPI deliberately uses Query/Path/Body as default argument values
"app/routers/**" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app", "config", "db", "middleware", "models", "routers", "services", "tasks"]
force-sort-within-sections = true

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "celery-types>=0.26.0",
    "httpx>=0.28.1",
    "hypothesis>=6.151.9",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
    "pytest-cov>=7.0.0",
    "radon>=6.0.1",
    "xenon>=0.9.3",
]
